Issue #184: Fix line spacing in data selection drop-down menu.

--- a/ui/rules.ui.css
+++ b/ui/rules.ui.css
@@ -181,6 +181,14 @@ ul.rules-autocomplete .rules-dsac-group {
   background-color: #eee;
 }
 
+ul.rules-autocomplete .rules-dsac-group {
+  background-color: #eee;
+}
+
+ul.rules-autocomplete .rules-dsac-item {
+  display: inline;
+}
+
 ul.rules-autocomplete .ui-corner-all {
   -moz-border-radius: 0px;
 }
